--- a/CSS/sto.css
+++ b/CSS/sto.css
@@ -186,6 +186,54 @@ body{
     font-size: 25px;
 }
 
+/* -------------- Capas Olimpíadas -------------- */
+.olimpiada-capas > div {
+    background: linear-gradient(90deg, black, rgb(0, 0, 0), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.555), rgba(0, 0, 0, 0));
+    top: 0;
+    color: white;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100vh;
+    width: calc(100vw - 240px);
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    transition: 1s;
+    transform: translateX(-150vw);
+    text-align: center;
+}
+.olimpiada-capas .capa-voltar {
+    text-align: start;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding: 20px;
+}
+.capa-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.capa-header h1 {
+    font-size: 40px;
+}
+.capa-header img {
+    height: 300px;
+    padding: 8px;
+}
+.capa-conteudo {
+    padding: 0 120px;
+    font-size: 20px;
+}
+.capa-botao button {
+    font-weight: bold;
+    padding: 8px;
+    font-size: 24px;
+    border: 2px solid white;
+    border-radius: 8px;
+}
 
 /* -------------- Vídeos -------------- */
 .voltar{
@@ -601,7 +649,7 @@ body{
 }
 
 
-.apdr{
+div.apdr{
     transform: translateX(0);
     transition: 1.2s;
 }
