--- a/CSS/styleResponsive.css
+++ b/CSS/styleResponsive.css
@@ -16,6 +16,7 @@
     }
     .ct{
         width: 100%;
+        height: 110%;
     }
 
     .ct h1{
@@ -109,6 +110,7 @@
 
     .telaexpo{
         width: 100%;
+        padding: 12px;
     }
     .trabalho{
         padding: 20px;
