--- a/CSS/sto.css
+++ b/CSS/sto.css
@@ -410,9 +410,13 @@ body{
 }
 
 /* Quiz */
+.esq{
+    display: none;
+}
+
 .ConteinerQuiz{
     position: fixed;
-    height: 100vh;
+    height: fit-content;
     width: 100%;
     top: 0;
     left: 0;
@@ -430,7 +434,7 @@ body{
     flex-direction: row;
     background-color: rgb(22, 27, 32); 
     width: 90%;
-    height: 550px;
+    height: fit-content;
     border-radius: 10px;
     gap: 100px;
     overflow: hidden;
@@ -439,11 +443,13 @@ body{
     transition: 1s;
 }
 
-.iniciarConteiner{
+.iniciarConteiner,
+.initC{
     z-index: 1000000000000000000;
     opacity: 1.5;
 }
-.initQuiz{
+.initQuiz,
+.Apaqui{
     transform: scale(1);
     transition: 1s;
 }
@@ -477,7 +483,7 @@ body{
 .questao{
     width: 100%;
     height: fit-content;
-    
+    justify-content: center;
     display: flex;
     flex-shrink: 0;
     gap: 20px;
