--- a/CSS/sto.css
+++ b/CSS/sto.css
@@ -12,7 +12,7 @@ body{
     overflow: hidden;
     width: 100vw;
     height: 100vh;
-    transition: 0.8s;
+    transition: 0.5s;
 }
 
 #btm{
@@ -30,17 +30,21 @@ body{
     left: 0;
     gap: 10px;
     align-items: center;
+    overflow: visible;
     background: linear-gradient(#020020, #000930, #000f53); 
     z-index: 10000000;
-    transition: 0.8s;
+    transition: 0.5s;
+}
+.nav::-webkit-scrollbar{
+    display: none;
 }
 .off{
     transform: translateX(-100%);    
-    transition: 0.8s;
+    transition: 0.5s;
 }
 .offbg{
     padding-left: 240px;
-    transition: 0.8s;
+    transition: 0.5s;
 }
 
 .menu{
