--- a/CSS/styleResponsive.css
+++ b/CSS/styleResponsive.css
@@ -134,6 +134,13 @@
     .sobre{
         width: 100%;
     }
+    .sobre h1{
+        font-size: 30px;
+    }
+    .sobre h2{
+        font-size: 28px;
+    }
+
     .ImagemMaisSobre{
         display: none;
     }
